gatewayapi/httpd-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-httpd 
  namespace: default
 
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-svc
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: httpd-admin-svc
            port:
              number: 80
